--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,13 @@
 }
 
 @font-face {
+  font-family: "Neue Haas Unica 400";
+  src: url("https://res.cloudinary.com/dp20bvzhn/raw/upload/v1725332448/willie-design/Neue_Haas_Unica_W1G_woofy5.woff2") format("woff2");
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
   font-family: "Neue Haas Unica 500";
   src: url("https://res.cloudinary.com/dp20bvzhn/raw/upload/v1725311631/willie-design/Neue_Haas_Unica_W1G_Medium_iny9c2.woff2") format("woff2");
   font-weight: 500;
@@ -21,6 +28,14 @@
   src: url("https://res.cloudinary.com/dp20bvzhn/raw/upload/v1725311217/willie-design/Neue_Haas_Unica_W1G_Heavy_y6u3o0.woff2") format("woff2");
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Neue Haas Unica 800 Italic";
+  src: url("https://res.cloudinary.com/dp20bvzhn/raw/upload/v1725331274/willie-design/NeueHaasUnica-ExtraBoldItalic_pzpzty.woff2") format("woff2");
+  font-weight: 800;
+  font-style: italic;
   font-display: swap;
 }
 
@@ -38,8 +53,10 @@
   --column-width: calc(calc(100vw - (var(--gutter-width) * 13)) / var(--column));
 
   --ff-romie-trial: "Romie Trial", serif;
+  --ff-nhu-400: "Neue Haas Unica 400", sans-serif;
   --ff-nhu-500: "Neue Haas Unica 500", sans-serif;
   --ff-nhu-800: "Neue Haas Unica 800", sans-serif;
+  --ff-nhu-800-italic: "Neue Haas Unica 800 Italic", sans-serif;
   --ff-nhu-950: "Neue Haas Unica 950", sans-serif;
 
   --fc-black: hsla(0, 0%, 0%, 1);
@@ -48,7 +65,7 @@
   --fc-white-200: hsla(0, 0%, 100%, 0.4);
   --fc-grey-200: hsla(0, 0%, 100%, 0.24);
 
-  --animation-primary: 0.735s cubic-bezier(0.62, 0.05, 0.01, 0.99);
+  --animation-primary: .9s cubic-bezier(1, 0, 0, 1);
 }
 
 * {
@@ -64,8 +81,14 @@ body {
   height: 100svh;
   overflow-x: clip;
   position: relative;
-
+  background-color: white;
   scroll-behavior: smooth;
+}
+
+html {
+  overscroll-behavior: none;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
 
 ::-webkit-scrollbar {
@@ -73,35 +96,6 @@ body {
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
-
-/* a {
-  text-decoration: none;
-  color: var(--black);
-}
-
-li {
-  list-style: none;
-  display: inline-flex;
-}
-
-p,
-span,
-a,
-button {
-  line-height: 0.9cap;
-  font-size: clamp(0.75rem, 1rem + 0.25vw, 0.85rem);
-  text-wrap: nowrap;
-}
-
-button {
-  background-color: transparent;
-  border: 0;
-  cursor: pointer;
-}
-
-ul {
-  line-height: 0.9cap;
-} */
 
 /* Grid layout overlay */
 
@@ -116,7 +110,7 @@ ul {
       transparent calc(100% / var(--column)));
   background-position: left top;
   background-size: calc(100% + var(--gutter-width)) 100%;
-  z-index: 1;
+  z-index: 3;
   transition: opacity 0.3s ease;
   margin: 0 auto;
   pointer-events: none;
@@ -136,5 +130,188 @@ ul {
 }
 
 /* Utility Class */
+.uc-section-container {
+  max-width: 90rem;
+  margin: 0 auto;
+}
+
+.uc-fs13-fw950 {
+  font-size: clamp(0.8125rem, 0.8125rem + 0vw, 0.8125rem);
+  font-family: var(--ff-nhu-950);
+  font-weight: 950;
+  line-height: 1;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+}
+
+.uc-fs13-fw800 {
+  font-size: clamp(0.8125rem, 0.8125rem + 0vw, 0.8125rem);
+  font-family: var(--ff-nhu-800-italic);
+  font-weight: 800;
+  line-height: 1;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+}
+
+.uc-fs13-fw500 {
+  font-size: clamp(0.8125rem, 0.8125rem + 0vw, 0.8125rem);
+  font-family: var(--ff-nhu-500);
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: -0.03em;
+  color: var(--fc-black);
+}
+
+.uc-fs13-fw400 {
+  font-size: clamp(0.8125rem, 0.8125rem + 0vw, 0.8125rem);
+  font-family: var(--ff-nhu-400);
+  font-weight: 400;
+  line-height: 1;
+  letter-spacing: -0.005em;
+  color: var(--fc-black);
+}
 
 /* Page styling */
+/* Header section */
+.c-header {
+  position: fixed;
+  width: 100%;
+  padding: var(--gutter-width);
+  z-index: 2;
+  background-color: white;
+}
+
+.c-header p,
+.c-header a,
+.c-header h2,
+.c-header h1,
+.c-header span,
+.c-header button {
+  color: white;
+}
+
+.c-header_container {
+  display: grid;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  gap: var(--gutter-width);
+  mix-blend-mode: difference;
+}
+
+.c-header_container .author-wrapper {
+  grid-column: span 3 / span 3;
+  display: flex;
+  flex-direction: column;
+  gap: calc(20 / 16 * 1rem);
+  height: fit-content;
+}
+
+.c-header_container .enquires-wrapper {
+  grid-column: 9 / 12;
+  display: flex;
+  flex-direction: column;
+  gap: calc(20 / 16 * 1rem);
+}
+
+.enquires-wrapper .nav-list_item {
+  list-style: none;
+}
+
+.enquires-wrapper .nav-list_item .nav-item_link {
+  text-decoration: none;
+  position: relative;
+  line-height: .9;
+  display: inline-block;
+}
+
+.info-button {
+  height: fit-content;
+  margin: 0 0 0 auto;
+  width: fit-content;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  position: relative;
+}
+
+.nav-item_link::before,
+.info-button::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: hsla(165, 100%, 50%, 0.527);
+  left: 0;
+  top: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform var(--animation-primary);
+  z-index: -1;
+  will-change: transform;
+  pointer-events: none;
+}
+
+.nav-item_link:hover::before,
+.info-button:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.gmt-time {
+  position: relative;
+  line-height: 1;
+  display: flex;
+  align-items: flex-start;
+}
+
+.gmt-time .time-timezone {
+  position: absolute;
+  left: 0;
+  transform: translateX(-200%);
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.gmt-time .time {
+  line-height: .7;
+}
+
+.ticker {
+  animation: blink .9s infinite;
+  animation-timing-function: steps(2, jump-start);
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+
+/* Responsive Design */
+@media (max-width: 400px) {
+  :root {
+    --column: 4;
+    --gutter-width: 3vw;
+  }
+
+  .overlay {
+    max-width: calc(100% - 6vw);
+    padding: 0;
+  }
+
+  .c-header_container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .info-button,
+  .gmt-time,
+  .author-wrapper_title {
+    display: none;
+  }
+}
