--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,7 +201,7 @@ html {
 /* Page styling */
 /* Header section */
 .c-header {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   padding: var(--gutter-width);
@@ -233,11 +233,32 @@ html {
   height: fit-content;
 }
 
+[data-faded-out='true'] {
+  transition: opacity 1s ease-out;
+}
+
+[data-faded-out='true'].is-faded_out {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.c-header_container .header-link {
+  text-decoration: none;
+  position: relative;
+  height: fit-content;
+  grid-column: 5 / span 2;
+  width: fit-content;
+}
+
 .enquires-wrapper {
   grid-column: 9 / 12;
   display: flex;
   flex-direction: column;
   gap: calc(20 / 16 * 1rem);
+}
+
+.enquires-wrapper .enquires-wrapper_heading {
+  color: var(--fc-white-100);
 }
 
 .enquires-wrapper .nav-list_item {
@@ -249,6 +270,7 @@ html {
   position: relative;
   line-height: .9;
   display: inline-block;
+  color: var(--fc-white-100);
 }
 
 .info-button {
@@ -259,11 +281,19 @@ html {
   cursor: pointer;
   border: none;
   position: relative;
+  transition: transform .2s ease-out;
+
+  grid-column: -1 / -3;
+  position: fixed;
+  right: var(--gutter-width);
+  top: var(--gutter-width);
+  z-index: 3;
 }
 
 .nav-item_link::before,
 .info-button::before,
-.project-link::before {
+.project-link::before,
+.c-header_container .header-link::before {
   position: absolute;
   content: "";
   width: 100%;
@@ -281,7 +311,8 @@ html {
 
 .nav-item_link:hover::before,
 .info-button:hover::before,
-.project-link:hover::before {
+.project-link:hover::before,
+.c-header_container .header-link:hover::before {
   transform: scaleX(1);
   transform-origin: left;
 }
@@ -299,10 +330,13 @@ html {
   transform: translateX(-200%);
   line-height: 1;
   text-transform: uppercase;
+  color: var(--fc-white-100);
 }
 
-.gmt-time .time {
+.gmt-time .time,
+.gmt-time .time span {
   line-height: .7;
+  color: var(--fc-white-100);
 }
 
 .ticker {
@@ -336,9 +370,8 @@ html {
   gap: var(--gutter-width);
 }
 
-.c-contact_container .menu,
-.c-contact_container .send-message {
-  grid-column: span 2 / span 2;
+.menu,
+.send-message {
   border: none;
   text-align: left;
   padding: 12px 1rem;
@@ -349,6 +382,20 @@ html {
   cursor: pointer;
   text-wrap: nowrap;
   border-radius: 2px;
+  transition: background-color 1s cubic-bezier(0.075, 0.82, 0.165, 1), color 1s cubic-bezier(0.075, 0.82, 0.165, 1), transform .2s ease-out;
+}
+
+.send-message {
+  width: calc(2.125 * var(--column-width));
+}
+
+.menu:hover,
+.send-message:hover,
+.menu:focus-visible,
+.send-message:focus-visible {
+  background-color: var(--fc-white-100);
+  color: black;
+  outline: none;
 }
 
 .c-contact_container .menu {
@@ -357,12 +404,14 @@ html {
 
 /* Main section */
 .c-main {
-  width: 100%;
+  --clip-path-value: polygon(30% 5%, 70% 5%, 70% 100%, 30% 100%);
+  width: 100vw;
   min-height: 100svh;
   background-color: var(--fc-black-100);
   padding-top: calc(212 / 16 * 1rem);
   position: relative;
   z-index: 2;
+  clip-path: var(--clip-path-value);
 }
 
 .main-heading_wrapper {
@@ -370,9 +419,135 @@ html {
   grid-template-columns: repeat(12, minmax(0, 1fr));
   gap: var(--gutter-width);
   padding-inline: var(--gutter-width);
-  margin-bottom: calc(74 / 16 * 1rem);
+  padding-bottom: calc(74 / 16 * 1rem);
+  background-color: var(--fc-black-100);
 }
 
+.c-main_container {
+  position: relative;
+}
+
+/* Information Modal */
+.c-main .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100svh;
+  background-color: #020202;
+  z-index: 10;
+  padding: var(--gutter-width);
+  clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+  /* transition: clip-path 1.4s cubic-bezier(1, 0, 0, 1); */
+}
+
+.modal.active {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+
+.modal .modal-content {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.modal-header {
+  display: grid;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  gap: var(--gutter-width);
+  position: relative;
+  z-index: 4;
+}
+
+.modal-header .modal-heading {
+  grid-column: span 5 / span 5;
+  line-height: 1.6;
+}
+
+.modal .modal-heading,
+.modal .modal-heading span {
+  font-size: clamp(0.875rem, 0.8421rem + 0.1754vw, 1rem);
+  color: var(--fc-white-100);
+  letter-spacing: 0.01em;
+}
+
+.modal-footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.modal-footer .send-message {
+  background-color: var(--fc-grey-200);
+}
+
+.modal-footer .left-content {
+  display: flex;
+  gap: 2px;
+  align-items: flex-end;
+  flex-wrap: wrap;
+}
+
+.left-content .services {
+  display: flex;
+  flex-direction: column;
+  gap: calc(28/16 * 1rem);
+  width: calc(216 / 16 * 1rem);
+}
+
+.services .services-heading {
+  width: 100%;
+}
+
+.services .services-heading,
+.right-content p {
+  cursor: auto;
+  pointer-events: none;
+}
+
+.right-content p {
+  width: fit-content;
+}
+
+.left-content .services .services-list_item {
+  list-style: none;
+  color: var(--fc-white-100);
+}
+
+.left-content .services .services-list {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.modal-content .modal-body {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-body video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+  z-index: -1;
+  pointer-events: none;
+}
+
+/* Main content for the main section */
 .main-heading {
   grid-column: 5 / 8;
   display: flex;
@@ -397,7 +572,8 @@ html {
 
 .projects-item .projects-item_description {
   position: sticky;
-  top: 0;
+  /* top: var(--gutter-width); */
+  top: calc(-100px + var(--gutter-width));
   padding-inline: var(--gutter-width);
   width: 100%;
   background-color: rgba(255, 255, 255, 0.001);
@@ -441,7 +617,8 @@ html {
 /* Slider */
 .projects-item.slider .projects-item_description {
   position: sticky;
-  top: 0;
+  /* top: var(--gutter-width); */
+  top: calc(-100px + var(--gutter-width));
 }
 
 .projects-item.slider .slider-row {
@@ -513,8 +690,11 @@ html {
   filter: invert(0);
 }
 
-.controls button:active {
-  transform: scale(0.9);
+.controls button:active,
+.menu:active,
+.send-message:active,
+.info-button:active {
+  transform: scale(0.85);
 }
 
 .controls .prev-button img,
@@ -549,7 +729,7 @@ html {
   padding: var(--gutter-width);
   position: sticky;
   bottom: 0;
-  z-index: 1;
+  z-index: -1;
 }
 
 .c-footer .top-wrapper {
@@ -566,12 +746,19 @@ html {
   z-index: 1;
 }
 
+.c-footer h2,
+.c-footer span,
+.c-footer a,
+.c-footer p {
+  color: var(--fc-black) !important;
+}
+
 .middle-wrapper {
   display: grid;
   grid-template-columns: repeat(12, minmax(0, 1fr));
   gap: var(--gutter-width);
   width: 100%;
-  margin: calc(174/16 * 1rem) 0 calc(264/16 * 1rem);
+  margin: calc(124/16 * 1rem) 0 calc(214/16 * 1rem);
 }
 
 .middle-wrapper .wrapper-heading,
@@ -600,9 +787,16 @@ html {
 }
 
 
-.middle-wrapper .wrapper-link:hover::before {
+.middle-wrapper .wrapper-link:hover::before,
+.middle-wrapper .wrapper-link:focus-visible::before {
   transform: scaleX(1);
   transform-origin: left;
+}
+
+.middle-wrapper .wrapper-link:hover,
+.middle-wrapper .wrapper-link:focus-visible {
+  outline: none;
+  border: none;
 }
 
 .bottom-wrapper {
@@ -621,6 +815,49 @@ html {
 }
 
 /* Responsive Design */
+@media (max-width: 797px) {
+
+  .info-send_message,
+  .right-content p {
+    display: none;
+  }
+
+  .modal-footer {
+    gap: .5rem;
+  }
+
+  .modal-footer .left-content {
+    align-items: flex-start;
+    row-gap: 2rem;
+  }
+
+  .left-content .services {
+    flex-basis: 48%;
+    flex-direction: column-reverse;
+    gap: 1rem;
+  }
+
+  .services .services-heading {
+    padding: 0;
+    background-color: transparent;
+    opacity: 0.4;
+  }
+
+  .left-content {
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .left-content .services {
+    flex-basis: 30%;
+  }
+
+  .c-main {
+    clip-path: unset;
+  }
+}
+
+
 @media (max-width: 747px) {
 
   .c-contact_container .menu,
@@ -631,7 +868,7 @@ html {
 
 @media (max-width: 509px) {
   .projects-item.slider {
-    height: 160vh;
+    height: 120vh;
   }
 
   .slider-row {
@@ -642,7 +879,7 @@ html {
   .slider-row .right-image_wrapper {
     flex-basis: 100%;
     position: relative;
-    height: 80vh;
+    height: 60vh;
   }
 
   .bottom-wrapper {
@@ -720,5 +957,59 @@ html {
 
   .projects-item_description .description-title {
     grid-column: 3/5;
+  }
+
+  .c-main .modal {
+    position: fixed;
+    transition: clip-path 1.8s cubic-bezier(1, 0, 0, 1);
+  }
+
+  .modal .modal-heading {
+    max-width: 100%;
+    padding-top: 17vh;
+  }
+
+  .modal-footer h3,
+  .modal-footer li {
+    font-size: 10px !important;
+  }
+
+  .modal-footer {
+    bottom: 9vh;
+  }
+
+  .modal-body video {
+    height: auto;
+  }
+
+  .c-header_container .author-wrapper.is-removed {
+    opacity: 1;
+  }
+
+  .left-content .services {
+    width: 30%;
+  }
+
+  .modal-header {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 2rem;
+  }
+
+  .modal-header .modal-heading {
+    padding-top: 0;
+  }
+
+  .enquires-wrapper {
+    width: fit-content;
+    margin: 0 0 0 auto;
+  }
+
+  [data-faded-out='true'].is-faded_out {
+    opacity: 1;
+  }
+
+  .header-link[data-faded-out='true'].is-faded_out {
+    opacity: 0;
   }
 }
