fix: Fix pointer events conflict between the modal and main content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -431,6 +431,11 @@ html {
   padding: var(--gutter-width);
   transition: opacity .5 ease-out;
   opacity: 0;
+  pointer-events: none
+}
+
+.modal.active {
+  pointer-events: all;
 }
 
 .modal .modal-content {
