--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,7 +114,8 @@ html {
   transition: opacity 0.3s ease;
   margin: 0 auto;
   pointer-events: none;
-  max-width: 90rem;
+  /* max-width: 90rem; */
+  max-width: calc(100vw - 2vw);
   padding: 0 1vw;
 }
 
@@ -124,14 +125,16 @@ html {
 
 @media (max-width: 1439px) {
   .overlay {
-    max-width: calc(100% - 2vw);
+    /* max-width: calc(100% - 2vw); */
+    max-width: calc(100vw - 2vw);
     padding: 0;
   }
 }
 
 /* Utility Class */
 .uc-section-container {
-  max-width: 90rem;
+  /* max-width: 90rem; */
+  max-width: 100vw;
   margin: 0 auto;
 }
 
@@ -203,7 +206,7 @@ html {
 .c-header {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   padding: var(--gutter-width);
   z-index: 4;
   background-color: rgba(255, 255, 255, 0.001);
