--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1103,12 +1103,11 @@ html {
 
 [data-fade-in] {
   opacity: 0;
-  will-change: transform;
+  will-change: opacity;
 }
 
 [data-scale-in] {
   transform: scale(1.2);
-  opacity: 0;
   will-change: transform;
 }
 
@@ -1126,6 +1125,20 @@ html {
 }
 
 [data-slide-in] {
-  --clip-value: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
-  clip-path: var(--clip-value);
+  position: relative;
+  will-change: transform;
+  --transform-value: 1;
+}
+
+[data-slide-in]::before {
+  position: absolute;
+  content: "";
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  transform: scaleY(var(--transform-value));
+  transform-origin: bottom;
+  background: var(--fc-black-100);
+  z-index: 4;
+  will-change: transform;
 }
